// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardCandidateVerificationPrompt golden > renders an empty statement list for the generic variant 1`] = `
{
  "system": ""엘리아"에 대한 아래 항목 중, 본문에 명시적으로 드러나는 것만 골라라.
추측·암시·일반 지식으로 보충하지 말고 본문 문장으로 확인되는 항목만 인정하라.
인정하는 항목의 번호만 JSON 배열로 출력하라. 설명 금지. 없으면 [].",
  "user": "[본문]
엘리아는 항구 병원의 의사다.

[항목]
",
}
`;

exports[`CardCandidateVerificationPrompt golden > renders an empty statement list for the xs variant 1`] = `
{
  "system": ""엘리아" 항목 중 본문에 명시된 번호만 JSON 배열로. 추측 금지. 없으면 [].",
  "user": "[본문]
엘리아는 항구 병원의 의사다.
[항목]
",
}
`;

exports[`CardCandidateVerificationPrompt golden > renders numbered statements for the generic variant 1`] = `
{
  "system": ""엘리아"에 대한 아래 항목 중, 본문에 명시적으로 드러나는 것만 골라라.
추측·암시·일반 지식으로 보충하지 말고 본문 문장으로 확인되는 항목만 인정하라.
인정하는 항목의 번호만 JSON 배열로 출력하라. 설명 금지. 없으면 [].",
  "user": "[본문]
엘리아는 항구 병원의 의사다.

[항목]
0. 엘리아는 의사다
1. 엘리아는 서른 살이다",
}
`;

exports[`CardCandidateVerificationPrompt golden > renders numbered statements for the rich variant 1`] = `
{
  "system": ""엘리아"에 대한 아래 항목 중, 본문에 명시적으로 드러나는 것만 골라라.
추측·암시·일반 지식으로 보충하지 말고 본문 문장으로 확인되는 항목만 인정하라.
인정하는 항목의 번호만 JSON 배열로 출력하라. 설명 금지. 없으면 [].",
  "user": "[본문]
엘리아는 항구 병원의 의사다.

[항목]
0. 엘리아는 의사다
1. 엘리아는 서른 살이다",
}
`;

exports[`CardCandidateVerificationPrompt golden > renders numbered statements for the xs variant 1`] = `
{
  "system": ""엘리아" 항목 중 본문에 명시된 번호만 JSON 배열로. 추측 금지. 없으면 [].",
  "user": "[본문]
엘리아는 항구 병원의 의사다.
[항목]
0. 엘리아는 의사다
1. 엘리아는 서른 살이다",
}
`;
